feat(): updated Svelte app to see history messages after connexion in the chat

--- a/frontend/angular/mini-talk/src/app/chat/chat.component.html
+++ b/frontend/angular/mini-talk/src/app/chat/chat.component.html
@@ -41,7 +41,7 @@
             }}</span>
           </div>
 
-          <div class="message-content">{{ message.content }}</div>
+          <div class="message-content">{{ decodeHtmlEntities(message.content) }}</div>
 
           <div class="message-time">
             {{ message.timestamp | date : "HH:mm" }}
